OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement_Set__c/Onboarding_Requirement_Set__c.object-meta.xml
<CustomObject>
    <description>A versioned configuration session for a program’s requirements</description>
    <label>Onboarding Requirement Set</label>
    <nameField>
        <displayFormat>ORS-{00000}</displayFormat>
        <label>Onboarding Requirement Set Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Requirement Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>