OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement_Set__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether this requirement set version can be used.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>