OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement_Set__c/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <description>Friendly name shown to admins when selecting this requirement set.</description>
    <label>Display Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>