OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement_Set__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle state for the set (Draft, Active, Archived, etc.).</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lifecycle_Status_Values</valueSetName>
    </valueSet>
</CustomField>