OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement_Set__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Version number of the requirement set configuration.</description>
    <label>Version</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>